kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cors-anywhere
spec:
  type: ClusterIP
  ports:
    -
      port: 8080
      targetPort: 8080
  selector:
    component: cors-anywhere
